welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: not found: value ver
  ver test3 = false
  ^array123:8: error: not found: value test3
    else if (nums(i) == 3) {test3 == true}
                            ^array123:10: error: not found: value test3
  if (test1==true && test2==true && test3==true) {return true} 
                                    ^